# repo-radar

./: .env.example  .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
.claude/commands/: repo-radar.md
.codex/skills/repo-radar/: SKILL.md
.github/workflows/: check-repos.yml
repo_radar/: __init__.py  analysis.py  cli.py  database.py  github.py  report.py
repo_radar/llm/: __init__.py  anthropic.py  base.py  gemini.py  ollama.py  openai.py
