[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-radar"
version = "1.0.0"
description = "GitHub repository intelligence system — cross-platform, multi-LLM"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Márcio Hideaki Muller Maebara" }
]
keywords = ["github", "repository", "analysis", "llm", "claude", "gemini", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "anthropic>=0.40",
    "google-generativeai>=0.8",
    "openai>=1.50",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff"]

[project.scripts]
repo-radar = "repo_radar.cli:main"

[project.urls]
Homepage = "https://github.com/marciohideaki/repo-radar"
Issues = "https://github.com/marciohideaki/repo-radar/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["repo_radar*"]

[tool.ruff]
line-length = 100
target-version = "py39"
